# data-centric-env

./: .gitignore  .spaceignore  BLOG.md  Dockerfile  README.md  __init__.py  _upload_plots.py  agent_utils.py  audit.py  client.py  eval_data_centric.py  hf_job_train.py  inference.py  models.py  openenv.yaml  plot_rewards.py  pyproject.toml  sft_generator.py  submit_job.py  test_features_smoke.py  train_colab.ipynb  train_data_centric.py
logs/: README.md  full_run_training.jsonl  partial_run_training.jsonl  training.jsonl
server/: __init__.py  anti_exploit.py  app.py  data_centric_environment.py  dataset_generator.py  grader.py  model_evaluator.py  requirements.txt  specialist_agents.py
tests/: test_environment.py  test_grader.py
